--- a/airlight-and/src/main/res/layout/activity_main.xml
+++ b/airlight-and/src/main/res/layout/activity_main.xml
@@ -5,16 +5,25 @@
     android:layout_height="match_parent"
     tools:context="vn.siliconstraits.airlight.MainActivity"
     tools:ignore="MergeRootFrame" >
-    <fragment
+    <FrameLayout
             android:id="@+id/fragment"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:name="vn.siliconstraits.airlight.ViewPagerFragment"/>
+            />
     <LinearLayout
             android:id="@+id/linearFloor"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
     </LinearLayout>
+    <ImageButton
+            android:id="@+id/btnSettings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            style="?android:attr/borderlessButtonStyle"
+            android:src="@drawable/setting"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
 </FrameLayout>
